# vibespeak

./: Cargo.toml  README.md  session_control.json
config/: commands.toml
src/: config.rs  main.rs
